Prevent overflown and unscrollable code samples on small-width screens

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -31,6 +31,7 @@ pre {
     border: 1px solid #CFCFCF;
     padding: 0.6ex;
     color: black;
+    overflow: auto;
 }
 
 pre a, pre a:visited, pre a:link {
